# cmake-library-quickstart

./: CMakeLists.txt  build.sh  setup.ps1  setup.sh
src/: CMakeLists.txt
src/example/: CMakeLists.txt  main.cpp
src/shvrdengine/: CMakeLists.txt  Container.cpp
test/: CMakeLists.txt  main.cpp
